@@ -6,7 +6,6 @@ import inmobiliaria.es.uclm.negocio.alojamiento.dto.AlojamientoSearchResultDTO;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controlador REST que expone los endpoints para la gestión y
@@ -47,6 +46,6 @@ public class AlojamientoApiController {
 
                 return alojamientosEncontrados.stream()
                                 .map(AlojamientoSearchResultDTO::fromEntity)
-                                .collect(Collectors.toList());
+                                .toList();
         }
 }
